Penambahan Fitur Download File

--- a/templates/Pages/absen/list.html
+++ b/templates/Pages/absen/list.html
@@ -48,10 +48,10 @@
                                                     {% for sd in d %}
                                                         {% if sd == 'L' %}
                                                             <td style="background-color: red;color: white;vertical-align: middle;text-align: center;">L</td>
-                                                        {% elif sd == '1' %}
+                                                        {% elif sd == '' %}
                                                             <td style="background-color: white"></td>
-                                                        {% elif sd == '0' %}
-                                                            <td style="background-color: BLACK;color: white;vertical-align: middle;text-align: center;"></td>
+                                                        {% elif sd == 'A' %}
+                                                            <td style="background-color: rgb(148, 148, 148);color: white;vertical-align: middle;text-align: center;">A</td>
                                                         {% elif sd == 'I' %}
                                                             <td style="background-color:  green;color: black;vertical-align: middle;text-align: center;"><b>I</b></td>
                                                         {% elif sd == 'C' %}
