--- a/templates/Pages/karyawan/gaji/edit.html
+++ b/templates/Pages/karyawan/gaji/edit.html
@@ -1,85 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ubah Gaji Perkaryawan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="card mt-3">
-            <br>
-            <div class="ms-3 mt-1">
-                <p><b>Ubah Gaji Karyawan</b></p>
-            </div>
-            <hr>
-            <form action="/ubah-gaji/{{ kode }}" method="post" class="ms-3 mb-3">
-                <div>
-                    <p>
-                        <b>Detail Karyawan</b>
-                    </p>
-                </div>
-                <div class="row pe-3">
-                    <div class="col-md-4">
-                        <h6><b>NIK</b></h6>
-                        <input type="text" class="form-control" value="{{ data[1] }}" disabled>
-                    </div>
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>NAMA</b></h6>
-                            <input type="text" class="form-control" value="{{ data[2] }}" disabled>
-                        </div>
-                    </div>
-                    <!-- <div class="col-md-4">
-                        <div>
-                            <h6><b>JAM KERJA</b></h6>
-                            <input type="text" class="form-control" value="{{ 'Jam Kerja Normal' if data[3] == 1  else 'Jam Kerja Shift' }}" disabled>
-                        </div>
-                    </div> -->
-                    
-                    <div class="col-md-12 mt-4 b-2">
-                        <p><b>Gaji Karyawan</b></p>
-                    </div>
-                    
-                    <div class="col-md-6">
-                        <div>
-                            <h6><b>Gaji Pokok</b></h6>
-                            <input type="number" name="gaji_pokok" class="form-control" value="{{ data[4] }}">
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <div>
-                            <h6><b>Tunjangan Keahlian</b></h6>
-                            <input type="number" name="t_keahlian" class="form-control" value="{{ data[5] }}">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div>
-                            <h6><b>Tunjangan Jabatan</b></h6>
-                            <input type="number" name="t_jabatan" class="form-control" value="{{ data[6] }}">
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <div>
-                            <h6><b>Tunjangan Lain</b></h6>
-                            <input type="number" name="t_lain" class="form-control" value="{{ data[7] }}">
-                        </div>
-                    </div>
-                    <div class="col-md-12 mt-8">
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-success" type="submit">Simpan</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
+{% extends 'base.html' %}
+{% block title %}
+    Ubah Gaji Karyawan
+{% endblock %}
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+
+{% block navbar %}
+<nav class="navbar navbar-light bg-success" style="position: sticky;">
+    <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+        href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        MENU
+    </a>
+</nav>
+{% endblock %} 
+
+
+{% block content %}
+    <div class="card mt-3">
+        <div class="card-header"> 
+            <h4 class="mt-2" style="line-height: 0.4;"><b>Ubah Gaji Karyawan</b></h4>
+            <h6 style="color: rgb(73, 73, 73);">&nbsp Silahkan lengkapi data berikut untuk mengubah Gaji karyawan</h6>
+        </div>
+        <form action="/ubah-gaji/{{ kode }}" method="post" class="ms-3 mb-3">
+            <div>
+                <p>
+                    <b>Detail Karyawan</b>
+                </p>
+            </div>
+            <div class="row pe-3">
+                <div class="col-md-4">
+                    <h6><b>NIK</b></h6>
+                    <input type="text" class="form-control" value="{{ data[1] }}" disabled>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <h6><b>NAMA</b></h6>
+                        <input type="text" class="form-control" value="{{ data[2] }}" disabled>
+                    </div>
+                </div>
+                <!-- <div class="col-md-4">
+                    <div>
+                        <h6><b>JAM KERJA</b></h6>
+                        <input type="text" class="form-control" value="{{ 'Jam Kerja Normal' if data[3] == 1  else 'Jam Kerja Shift' }}" disabled>
+                    </div>
+                </div> -->
+                
+                <div class="col-md-12 mt-4 b-2">
+                    <p><b>Gaji Karyawan</b></p>
+                </div>
+                
+                <div class="col-md-6">
+                    <div>
+                        <h6><b>Gaji Pokok</b></h6>
+                        <input type="number" name="gaji_pokok" class="form-control" value="{{ data[4] }}">
+                    </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <div>
+                        <h6><b>Tunjangan Keahlian</b></h6>
+                        <input type="number" name="t_keahlian" class="form-control" value="{{ data[5] }}">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div>
+                        <h6><b>Tunjangan Jabatan</b></h6>
+                        <input type="number" name="t_jabatan" class="form-control" value="{{ data[6] }}">
+                    </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <div>
+                        <h6><b>Tunjangan Lain</b></h6>
+                        <input type="number" name="t_lain" class="form-control" value="{{ data[7] }}">
+                    </div>
+                </div>
+                <div class="col-md-12 mt-8">
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-success" type="submit">Simpan</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+{% endblock %} 
