--- a/templates/Pages/karyawan/gaji/list.html
+++ b/templates/Pages/karyawan/gaji/list.html
@@ -1,111 +1,106 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gaji Karyawan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
+{% block title %}
+Gaji Karyawan
+{% endblock %}
 
-<body>
+{% block navbar %}
     <nav class="navbar navbar-light bg-success">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
         <div class="container">
             <div class="ms-auto me-0 mt-2">
-                <form action="cari-karyawan" method="get">
+                <form action="cari-gaji" method="get">
                     <div class="input-group mb-2">
-                        <input type="text" class="form-control" name="key" placeholder="Cari Karyawan" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" name="key" placeholder="Cari Data Lembur" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         <button class="btn btn-outline-light" type="submit" id="button-addon1"><b>Cari</b></button>
                     </div>
                 </form>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-                <div class="col-md-12">
-                    <div class="card mt-2">
-                        <div class="ms-3 mt-2">
-                            <p><b>Daftar Gaji Karyawan </b></p>
-                        </div>
-                        <hr>
-                        <div class="card-body">
-                            <div class="table-responsive ">                                
-                            <table class="table table-hover table-bordered">
-                                <tbody>
-                                    <tr>
-                                        <th scope="col" style="vertical-align: middle;"><center>#</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>NIK</center></th>
-                                        <th scope="col" style="min-width: 250px;vertical-align: middle;"><center>Nama</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>Jml Hari Kerja</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>IZIN</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>CUTI</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>SAKIT</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>IZIN KHUSUS</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>ALPHA</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>IZIN PERJAM</center></th>
-                                        <th scope="col" style="min-width: 100px; vertical-align: middle;"><center>UPAH POKOK</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>TUNJANGAN JABATAN</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>TUNJANGAN KEAHLIAN</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>TUNJANGAN LAIN</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>UPAH TOTAL</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>LEMBUR</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>INSENTIF</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>GAJI KOTOR</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>POT. BPJS TK</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>POT. BPJS KES</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>POT. IZIN</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>POT. IZIN PERJAM</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>POT. PINJAMAN</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>POT. PAJAK</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>TAMBAHAN KOMPLAIN</center></th>
-                                        <th scope="col" style="vertical-align: middle;"><center>GAJI BERSIH</center></th>
-                                    </tr>
-                                    {% if data %}
+{% endblock %}
 
-                                        {% for item in data %}
-                                            <tr>
-                                                <td><center>{{ loop.index }}</center></td>
-                                                <td>{{ item[1] }}</td>
-                                                <td>{{ item[2] }}</td>
-                                                <td><center>{{ item[3] }}</center></td>
-                                                <td><center>{{ item[5] }}</center></td>
-                                                <td><center>{{ item[6] }}</center></td>
-                                                <td><center>{{ item[7] }}</center></td>
-                                                <td><center>{{ item[8] }}</center></td>
-                                                <td><center>{{ item[9] }}</center></td>
-                                                <td><center>{{ item[4] }}</center></td>
-                                                <td style="min-width: 200px;">{{ item[10] }}</td>
-                                                <td style="min-width: 200px;">{{ item[11] }}</td>
-                                                <td style="min-width: 200px;">{{ item[12] }}</td>
-                                                <td style="min-width: 200px;">{{ item[13] }}</td>
-                                                <td style="min-width: 200px;">{{ item[14] }}</td>
-                                                <td style="min-width: 200px;">{{ item[15] }}</td>
-                                                <td style="min-width: 200px;">{{ item[16] }}</td>
-                                                <td style="min-width: 200px;">{{ item[17] }}</td>
-                                                <td></td>
-                                                <td></td>
-                                                <td style="min-width: 200px;">{{ item[18] }}</td>
-                                                <td style="min-width: 200px;">{{ item[19] }}</td>
-                                                <td style="min-width: 200px;">{{ item[20] }}</td>
-                                                <td style="min-width: 200px;">{{ item[21] }}</td>
-                                                <td style="min-width: 200px;">{{ item[22] }}</td>
-                                                <td style="min-width: 200px;">{{ item[23] }}</td>
-                                            </tr>
-                                        {% endfor %}
-                                    {% endif %}
-                                </tbody>
-                            </table>
-                            </div>
+{% block content %}
+    <div class="row">
+            <div class="col-md-12">
+                <div class="card mt-2">
+                    <div class="ms-3 mt-2">
+                        <p><b>Daftar Gaji Karyawan </b></p>
+                    </div>
+                    <hr>
+                    <div class="card-body">
+                        <div class="table-responsive ">                                
+                        <table class="table table-hover table-bordered">
+                            <tbody>
+                                <tr>
+                                    <th scope="col" style="vertical-align: middle;"><center>#</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>NIK</center></th>
+                                    <th scope="col" style="min-width: 250px;vertical-align: middle;"><center>Nama</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>Jml Hari Kerja</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>IZIN</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>CUTI</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>SAKIT</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>IZIN KHUSUS</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>ALPHA</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>IZIN PERJAM</center></th>
+                                    <th scope="col" style="min-width: 100px; vertical-align: middle;"><center>UPAH POKOK</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>TUNJANGAN JABATAN</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>TUNJANGAN KEAHLIAN</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>TUNJANGAN LAIN</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>UPAH TOTAL</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>LEMBUR</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>INSENTIF</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>GAJI KOTOR</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>POT. BPJS TK</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>POT. BPJS KES</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>POT. IZIN</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>POT. IZIN PERJAM</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>POT. PINJAMAN</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>POT. PAJAK</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>TAMBAHAN KOMPLAIN</center></th>
+                                    <th scope="col" style="vertical-align: middle;"><center>GAJI BERSIH</center></th>
+                                </tr>
+                                {% if data %}
+
+                                    {% for item in data %}
+                                        <tr>
+                                            <td><center>{{ loop.index }}</center></td>
+                                            <td>{{ item[1] }}</td>
+                                            <td>{{ item[2] }}</td>
+                                            <td><center>{{ item[3] }}</center></td>
+                                            <td><center>{{ item[5] }}</center></td>
+                                            <td><center>{{ item[6] }}</center></td>
+                                            <td><center>{{ item[7] }}</center></td>
+                                            <td><center>{{ item[8] }}</center></td>
+                                            <td><center>{{ item[9] }}</center></td>
+                                            <td><center>{{ item[4] }}</center></td>
+                                            <td style="min-width: 200px;">{{ item[10] }}</td>
+                                            <td style="min-width: 200px;">{{ item[11] }}</td>
+                                            <td style="min-width: 200px;">{{ item[12] }}</td>
+                                            <td style="min-width: 200px;">{{ item[13] }}</td>
+                                            <td style="min-width: 200px;">{{ item[14] }}</td>
+                                            <td style="min-width: 200px;">{{ item[15] }}</td>
+                                            <td style="min-width: 200px;">{{ item[16] }}</td>
+                                            <td style="min-width: 200px;">{{ item[17] }}</td>
+                                            <td></td>
+                                            <td></td>
+                                            <td style="min-width: 200px;">{{ item[18] }}</td>
+                                            <td style="min-width: 200px;">{{ item[19] }}</td>
+                                            <td style="min-width: 200px;">{{ item[20] }}</td>
+                                            <td style="min-width: 200px;">{{ item[21] }}</td>
+                                            <td style="min-width: 200px;">{{ item[22] }}</td>
+                                            <td style="min-width: 200px;">{{ item[23] }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                {% endif %}
+                            </tbody>
+                        </table>
                         </div>
                     </div>
                 </div>
-        </div>
+            </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
