--- a/templates/Pages/karyawan/gaji/tambah.html
+++ b/templates/Pages/karyawan/gaji/tambah.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Tambah Gaji Karyawan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <form action="tambah-gaji" class="mt-3 form-control " method="post" enctype="multipart/form-data">
-                    <p style="font-weight: bold;">Upload File Gaji yang ingin ditambahkan (HARUS DENGAN FORMAT CSV)</p>
-                    <input type="file" class="form-control" name="file-karyawan" id="">
-                    <input type="submit" value="Upload File" class="btn btn-primary mt-4">
-                    <a class="btn btn-md btn-success ms-3 mt-4" href="/data/gaji-karyawan/download">Unduh Gaji Saat Ini</a>
+{% extends 'base.html' %}
+{% block title %}
+    Ubah Gaji Karyawan
+{% endblock %}
 
-                    <div class="mt-2">
-                        <p><i><b>* untuk menambah/mengubah gaji secara massal silahkan download file gaji saat ini dan upload kembali ke form yang tersedia !</b></i></p>
-                    </div>
-                </form>
-            </div>
+
+{% block navbar %}
+    <nav class="navbar navbar-light bg-success" style="position: sticky;">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
+    </nav>
+{% endblock %} 
+
+
+{% block content %} 
+    <div class="row">
+        <div class="col-md-12">
+            <form action="tambah-gaji" class="mt-3 form-control " method="post" enctype="multipart/form-data">
+                <p style="font-weight: bold;">Upload File Gaji yang ingin ditambahkan (HARUS DENGAN FORMAT CSV)</p>
+                <input type="file" class="form-control" name="file-karyawan" id="">
+                <input type="submit" value="Upload File" class="btn btn-primary mt-4">
+                <a class="btn btn-md btn-success ms-3 mt-4" href="/data/gaji-karyawan/download">Unduh Gaji Saat Ini</a>
+
+                <div class="mt-2">
+                    <p><i><b>* untuk menambah/mengubah gaji secara massal silahkan download file gaji saat ini dan upload kembali ke form yang tersedia !</b></i></p>
+                </div>
+            </form>
         </div>
     </div>
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
