--- a/templates/Pages/karyawan/insentif/add.html
+++ b/templates/Pages/karyawan/insentif/add.html
@@ -1,70 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Tambah Insentif</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="card mt-3">
-            <br>
-            <div class="ms-3 mt-1">
-                <p><b>Tambah Insentif Karyawan</b></p>
-            </div>
-            <hr>
-            <form action="/tambah-insentif" method="post" class="ms-3 mb-3">
-                <div class="row pe-3">
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>Karyawan</b></h6>
-                            <input type="text" list="karyawanList" name="no_karyawan" class="form-control" placeholder="Silahkan Pilih Karyawan yang Izin">
-                            <datalist id="karyawanList">
-                                {% for d in data %}
-                                    <option value="{{ d[1] }}-{{ d[2] }}">{{ d[1] }} - {{ d[2] }}</option>
-                                {% endfor %}
-                            </datalist>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>Tanggal</b></h6>
-                            <input type="date" name="tanggal" class="form-control" id="">
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>Tujuan</b></h6>
-                            <input type="text" name="tujuan" class="form-control" placeholder="Tujuan Pemberian Uang Insentif" id="">
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-4">
-                        <div>
-                            <h6><b>Jumlah Hari</b></h6>
-                            <input type="number" name="jumlah_hari" class="form-control" id="">
-                        </div>
-                    </div>
-                    <div class="col-md-8 mt-4">
-                        <div>
-                            <h6><b>Insentif Perhari</b></h6>
-                            <input type="number" name="insentif" class="form-control" id="">
-                        </div>
-                    </div>
-                    <div class="col-md-12 mt-4">
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-success" type="submit">Simpan</button>
-                        </div>
+{% extends 'base.html' %}
+{% block title %}
+    Tambah Data Insentif
+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-light bg-success" style="position: sticky;">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
+    </nav>
+{% endblock %}
+
+{% block content %} 
+    <div class="card mt-3">
+        <br>
+        <div class="ms-3 mt-1">
+            <p><b>Tambah Insentif Karyawan</b></p>
+        </div>
+        <hr>
+        <form action="/tambah-insentif" method="post" class="ms-3 mb-3">
+            <div class="row pe-3">
+                <div class="col-md-4">
+                    <div>
+                        <h6><b>Karyawan</b></h6>
+                        <input type="text" list="karyawanList" name="no_karyawan" class="form-control" placeholder="Silahkan Pilih Karyawan yang Izin">
+                        <datalist id="karyawanList">
+                            {% for d in data %}
+                                <option value="{{ d[1] }}-{{ d[2] }}">{{ d[1] }} - {{ d[2] }}</option>
+                            {% endfor %}
+                        </datalist>
                     </div>
                 </div>
-            </form>
-        </div>
+                <div class="col-md-4">
+                    <div>
+                        <h6><b>Tanggal</b></h6>
+                        <input type="date" name="tanggal" class="form-control" id="">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <h6><b>Tujuan</b></h6>
+                        <input type="text" name="tujuan" class="form-control" placeholder="Tujuan Pemberian Uang Insentif" id="">
+                    </div>
+                </div>
+                <div class="col-md-4 mt-4">
+                    <div>
+                        <h6><b>Jumlah Hari</b></h6>
+                        <input type="number" name="jumlah_hari" class="form-control" id="">
+                    </div>
+                </div>
+                <div class="col-md-8 mt-4">
+                    <div>
+                        <h6><b>Insentif Perhari</b></h6>
+                        <input type="number" name="insentif" class="form-control" id="">
+                    </div>
+                </div>
+                <div class="col-md-12 mt-4">
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-success" type="submit">Simpan</button>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
