--- a/templates/Pages/karyawan/list.html
+++ b/templates/Pages/karyawan/list.html
@@ -1,33 +1,32 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Karyawan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
+{% block title %}Daftar Karyawan{% endblock %}
 
-<body>
+{% block navbar %}
     <nav class="navbar navbar-light bg-success">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
         <div class="container">
             <div class="ms-auto me-0 mt-2">
                 <form action="cari-karyawan" method="get">
                     <div class="input-group mb-2">
-                        <input type="text" class="form-control" name="key" placeholder="Cari Karyawan" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" name="key" placeholder="Cari Data Karyawan" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         <button class="btn btn-outline-light" type="submit" id="button-addon1"><b>Cari</b></button>
                     </div>
                 </form>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+{% endblock %}
+
+{% block content %} 
         <div class="row">
                 <div class="col-md-12">
                     <div class="card mt-2">
                         <div class="ms-3 mt-2">
-                            <p><b>Daftar Data Karyawan </b></p>
+                            <p><b>Daftar Karyawan </b></p>
                         </div>
                         <hr>
                         <div class="card-body">
@@ -36,32 +35,31 @@
                                 <tbody>
                                     <tr>
                                         <th scope="col">#</th>
-                                        <th scope="col">NIK</th>
-                                        <th scope="col">Nama</th>
-                                        <th scope="col">Jam Kerja</th>
-                                        <th></th>
+                                        <th scope="col"><center>NIK</center></th>
+                                        <th scope="col" style="width: 500px;"><center>Nama</center></th>
+                                        <th scope="col"><center>Jam Kerja</center></th>
+                                        <th style="width: 250px;"></th>
                                     </tr>
                                     {% for item in data %}
                                     <tr>
                                         <td>{{ loop.index }}</td>
                                         <td>{{ item[1] }}</td>
                                         <td>{{ item[2] }}</td>
-                                        {% if item[3] == "" %}
+                                        {% if item[3] == "1" %}
                                             <td>
-                                                Jam Kerja Normal
+                                                <center>Jam Kerja Normal</center>
                                             </td>
-                                            <td>
+                                            <!-- <td>
                                                 <a href="/ubah-shift/{{ item[1] }}" class="btn btn-md btn-success"><b>Ubah ke Shift</b></a>
-                                            </td>
-                                        {% endif %}
-                                        {% if item[3] == "2" %}
+                                            </td> -->
+                                        {% elif item[3] == "2" %}
                                             <td>
-                                                Jam Kerja Shift
+                                                <center>Jam Kerja Shift</center>
                                             </td>
-                                            <td>
+                                            <!-- <td>
                                                 <a href="/ubah-shift/{{ item[1] }}" class="btn btn-md btn-success"><b>Ubah Jam Normal</b></a>
                                                 <a href="/jadwal-shift/{{ item[1] }}" class="btn btn-md btn-success"><b>Atur Jadwal Shift</b></a>
-                                            </td>
+                                            </td> -->
                                         {% endif %}
                                         
                                         <td>
@@ -76,10 +74,4 @@
                     </div>
                 </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
