--- a/templates/Pages/karyawan/pinjaman_pajak/add.html
+++ b/templates/Pages/karyawan/pinjaman_pajak/add.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tambah Pinjaman dan Pajak</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container-fluid">
+{% extends 'base.html' %}
+
+{% block title %}
+    Tambah Pinjaman dan Pajak
+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-light bg-success">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
+    </nav>
+{% endblock %}
+
+{% block content %}
         <div class="card mt-3">
             <br>
             <div class="ms-3 mt-1">
@@ -58,41 +63,4 @@
                 </div>
             </form>
         </div>
-    </div>
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-
-    {% if request.path == "/pinjaman-pajak/tambah-baru" %}
-    <script lang="javascript">
-        jenis = document.getElementById('jenis_potongan')
-        button = document.getElementById("save-button")
-        conditionalField = document.getElementById("conditionalField")
-        batas_berlaku = document.getElementById("batas_berlaku")
-
-        jenis.addEventListener("change", function(){
-            if(jenis.value != ''){
-                button.removeAttribute("disabled")
-            }
-            if(jenis.value == 'pnj'){
-                batas_berlaku.removeAttribute("disabled")
-                conditionalField.removeAttribute("style")
-                batas_berlaku.setAttribute("required", "required")
-            }else if(jenis.value == 'pjk'){
-                batas_berlaku.setAttribute("disabled", "disabled")
-                conditionalField.setAttribute("style", "display:none")
-                batas_berlaku.removeAttribute("required")
-            }
-        })
-
-        if(jenis.value == ''){
-            button.setAttribute("disabled", "disabled")
-            batas_berlaku.setAttribute("disabled", "disabled")
-            conditionalField.setAttribute("style", "display:none")
-        }
-    </script>
-    {% endif %}
-</body>
-</html>
+{% endblock %}
