Menambah Fitur Insert Batch

--- a/templates/Pages/karyawan/gaji/list.html
+++ b/templates/Pages/karyawan/gaji/list.html
@@ -14,7 +14,7 @@ Gaji Karyawan
             <div class="ms-auto me-0 mt-2">
                 <form action="cari-gaji" method="get">
                     <div class="input-group mb-2">
-                        <input type="text" class="form-control" name="key" placeholder="Cari Data Lembur" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" name="key" placeholder="Cari Data Gaji" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         <button class="btn btn-outline-light" type="submit" id="button-addon1"><b>Cari</b></button>
                     </div>
                 </form>
@@ -38,7 +38,7 @@ Gaji Karyawan
                                 <tr>
                                     <th scope="col" style="vertical-align: middle;"><center>#</center></th>
                                     <th scope="col" style="vertical-align: middle;"><center>NIK</center></th>
-                                    <th scope="col" style="min-width: 250px;vertical-align: middle;"><center>Nama</center></th>
+                                    <th scope="col" style="min-width: 250px; vertical-align: middle;"><center>Nama</center></th>
                                     <th scope="col" style="vertical-align: middle;"><center>Jml Hari Kerja</center></th>
                                     <th scope="col" style="vertical-align: middle;"><center>IZIN</center></th>
                                     <th scope="col" style="vertical-align: middle;"><center>CUTI</center></th>
