--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,7 @@
                                 <li><a href="/gaji-karyawan" class="nav-link  {{ 'aktif' if request.path == '/gaji-karyawan' }} link-dark">Gaji Karyawan</a></li>
                                 <li><a href="/daftar-karyawan" class="nav-link link-dark {{ 'aktif' if request.path == '/daftar-karyawan' }}">Karyawan</a></li>
                                 <li><a href="/insentif" class="nav-link link-dark {{ 'aktif' if request.path == '/insentif' }}">Insentif</a></li>
+                                <li><a href="/bpjs" class="nav-link {{ 'aktif' if request.path == '/bpjs' }} link-dark rounded">BPJS Karyawan</a></li>
                                 <li><a href="/pinjaman-pajak" class="nav-link link-dark {{ 'aktif' if request.path == '/pinjaman-pajak' }}">Potongan Pinjaman dan Pajak</a></li>
                                 <li><a href="/komplain" class="nav-link link-dark {{ 'aktif' if request.path == '/komplain' }}">Komplain</a></li>
                             </ul>
