--- a/templates/Pages/absen/add.html
+++ b/templates/Pages/absen/add.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-md-12">
             <form action="tambah-absen" class="mt-3 form-control " method="post" enctype="multipart/form-data">
-                <p style="font-weight: bold;">Upload File Absen yang ingin ditambahkan (HARUS DENGAN FORMAT CSV)</p>
+                <p style="font-weight: bold;">Upload File Absen yang ingin ditambahkan</p>
                 <input type="file" class="form-control" name="file-absen" id="">
                 <input type="submit" value="Upload File" class="btn btn-primary mt-4">
             </form>
